# FishNet_CV

./: .gitignore  README.md  config.yaml  main.py  predictions.csv  pyproject.toml  requirements-advanced.txt  requirements.txt
data/: fishnet.yaml
data/annotations/: .gitkeep
docs/: COLAB.md  architecture.md
notebooks/: 01_dataset_exploration.ipynb  02_annotation_helper.ipynb  03_run_experiments.ipynb  04_analyze_results.ipynb
scripts/: audit_advanced_pipeline.py  export_test_predictions.py  install_advanced_deps.sh
src/: __init__.py  colab_bootstrap.py  config.py  dataset.py  evaluation.py  masks.py  measurement.py  paths.py  submission.py  utils.py  visualization.py
src/calibration/: __init__.py  grid_auto.py  marker.py
src/depth/: __init__.py  cache.py  depth_anything.py
src/experiments/: __init__.py  comparison_grid.py  ground_truth.py  notebook_helpers.py  regression.py  results.py  run_manager.py
src/measurement/: __init__.py  core.py  skeleton3d.py
src/methods/: __init__.py  estimator.py
src/models/: __init__.py  length_regression.py
src/pipelines/: __init__.py  advanced.py  advanced_inference.py  base.py  baseline.py  registry.py  regression_inference.py
src/visualization/: __init__.py  (+6 more)
tests/: test_advanced_calibration.py  test_advanced_config.py  test_dataset.py  test_evaluation.py  test_experiments.py  test_grid_auto.py  test_ground_truth_source.py  test_measurement.py  test_methods_facade.py  test_metric_reproduction.py  test_notebook_helpers.py  test_paths.py  test_skeleton3d.py  test_validation_ids.py  test_visualization.py
(+8 files in other folders)
