[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishnet-cv"
version = "0.1.0"
description = "Fish length estimation from RGB images and YOLO polygon annotations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FishNet CV Team" }]
keywords = ["computer-vision", "fish", "calibration", "measurement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "scikit-image>=0.22",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
ml = ["ultralytics>=8.0", "torch>=2.1", "transformers>=4.38"]
dev = ["pytest>=8.0", "ruff>=0.3"]

[project.scripts]
fishnet = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
